--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -15,24 +15,13 @@ jobs:
       fail-fast: false
       matrix:
         ruby: [2.7, 3.0, 3.1]
-        rails: ['6.0', '6.1']
+        rails: ['6.0', '6.1', '7.0']
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/rails_${{ matrix.rails }}.gemfile
     name: Test against Ruby ${{ matrix.ruby }} / Rails ${{ matrix.rails }}
     if: "!contains(github.event.head_commit.message, 'ci-skip')"
     timeout-minutes: 20
     runs-on: ubuntu-latest
-    services:
-      redis:
-        image: redis:5-alpine
-        ports:
-          - 6379:6379
-      postgres:
-        image: postgres:14-alpine
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_PASSWORD: suppa-duppa
     steps:
       - uses: actions/checkout@v2
         with:
@@ -43,9 +32,4 @@ jobs:
           bundler-cache: true
       - name: Build and test with Rake
         run: |
-          bundle exec rake db:create db:migrate
-          bundle exec rspec
-        env:
-          DATABASE_URL: postgres://postgres:suppa-duppa@localhost:5432/app_test
-          REDIS_URL: redis://localhost:6379
-          SONAR_PROJECT_TOKEN: ${{ secrets.SONAR_PROJECT_TOKEN }}
+          bundle exec rake
